--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,92 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-inverse ">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+              aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Mapit</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="map">
+        <sebm-google-map
+          [latitude]="lat"
+          [longitude]="lng"
+          [zoom]="zoom"
+          [disableDefaultUI]="false"
+          [zoomControl]="false"
+          (mapClick)="mapClicked($event)"
+        >
+          <sebm-google-map-marker
+            *ngFor="let m of markers;let i = index"
+            (markerClick)="clickedMarker(m,index)"
+            [latitude]="m.lat"
+            [longitude]="m.lng"
+            [markerDraggable]="m.draggable"
+            (dragEnd)="markerDragEnd(m,$event)"
+          >
+            <sebm-google-map-info-window>
+              <strong>{{m.name}}</strong>
+              <br>
+              <a class="delete" (click)="removeMarker(i)">Delete Marker</a>
+            </sebm-google-map-info-window>
+          </sebm-google-map-marker>
+        </sebm-google-map>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title">Add New Marker</h3>
+        </div>
+
+        <div class="panel-body">
+          <form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
+            <div class="row">
+              <div class="col-md-12">
+                <label>Location Name</label>
+                <input type="text" class="form-control" formControlName="name">
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-6">
+                <label>Latitude</label>
+                <input type="text" class="form-control" formControlName="lat">
+              </div>
+
+              <div class="col-md-6">
+                <label>Longitude</label>
+                <input type="text" class="form-control" formControlName="lng">
+              </div>
+            </div>
+
+            <div class="radio" *ngFor="let dragOption of draggableOptions">
+              <label>
+                <input type="radio" formControlName="draggable" [value]="dragOption.value">
+                {{dragOption.description}}
+              </label>
+            </div>
+            <input type="submit" class="btn btn-primary" value="Mapit!">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
